# hello-axum

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  prelude.rs
src/api/: mod.rs  postgres.rs  redis.rs  single_tp.rs  sqlx.rs  tok_postgres.rs
src/app/: client.rs  mod.rs  server.rs
