[package]
name = "hello-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
axum = "0.8.4"
redis = { version = "0.30.0", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenvy = "0.15.7"
anyhow = "1.0.98"
bb8 = "0.9.0"
bb8-redis = "0.22.0"
colored = "3.0"
reqwest = { version = "0.12.15", features = ["json"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres"] }

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
debug = false
panic = "abort"
codegen-units = 1
incremental = false
strip = "symbols"

[profile.dev.package.sqlx-macros]
opt-level = 3
